kompose.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kompose.cmd: kompose convert -f docker-compose.yaml -o kompose.yaml
      kompose.version: 1.21.0 (992df58d8)
    creationTimestamp: null
    labels:
      io.kompose.service: maana-currency
    name: maana-currency
  spec:
    ports:
    - name: "8050"
      port: 8050
      targetPort: 8050
    selector:
      io.kompose.service: maana-currency
  status:
    loadBalancer: {}
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      kompose.cmd: kompose convert -f docker-compose.yaml -o kompose.yaml
      kompose.version: 1.21.0 (992df58d8)
    creationTimestamp: null
    labels:
      io.kompose.service: maana-currency
    name: maana-currency
  spec:
    replicas: 1
    selector:
      matchLabels:
        io.kompose.service: maana-currency
    strategy: {}
    template:
      metadata:
        annotations:
          kompose.cmd: kompose convert -f docker-compose.yaml -o kompose.yaml
          kompose.version: 1.21.0 (992df58d8)
        creationTimestamp: null
        labels:
          io.kompose.service: maana-currency
      spec:
        containers:
        - image: '/:'
          imagePullPolicy: ""
          name: maana-currency
          ports:
          - containerPort: 8050
          resources: {}
        restartPolicy: Always
        serviceAccountName: ""
        volumes: null
  status: {}
kind: List
metadata: {}
