istio.yaml
apiVersion: v1
kind: Service
metadata:
  name: maana-currency
spec:
  ports:
  - port: 8050
    name: http
  selector:
    app: maana-currency
    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maana-currency-v1
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maana-currency
      version: v1
  template:
    metadata:
      labels:
        app: maana-currency
        version: v1
    spec:
      containers:
      - name: maana-currency
        image: services.azurecr.io/maana-currency:v1.0.2
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 8050
          name: http-port
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: maana-currency
spec:
  hosts:
  - "*"
  gateways:
  - graphql-gateway
  http:
  - match:
    - uri:
        exact: /graphql    
    route:
    - destination:
        host: maana-currency
        port:
          number: 8050
